--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "eframe_template"
-version = "0.1.0"
-authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
+authors = ["hobo0xcc"]
 edition = "2018"
+name = "othello"
+version = "0.0.1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,8 +11,11 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 eframe = "0.15.0" # Gives us egui, epi and web+native backends
+getrandom = {version = "0.2", features = ["js"]} 
+rand = "0.8.4" 
+time = "0.2.26" 
 
-serde = { version = "1", features = ["derive"], optional = true }
+serde = {version = "1", features = ["derive"], optional = true}
 
 [features]
 default = []
